--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -10,6 +10,41 @@
 		Знакомство с ЦТПО можно начать с экскурсии (заявку присылайте на fablab@misis.ru), чтобы потом поучаствовать в тематическом мастер-классе, послушать лекцию или поучаствовать в образовательной программе, например:
 	</p>
 	<br>
+	<h3>Мероприятия ЦТПО НИТУ "МИСиС"</h3>
+	<style type="text/css">
+	.tg  {border-collapse:collapse;border-spacing:0;}
+	.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+	.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+	.tg .tg-yw4l{vertical-align:top}
+	</style>
+	<table class="tg">
+	  <tr>
+	    <th class="tg-yw4l">№</th>
+	    <th class="tg-yw4l">Дата и место</th>
+	    <th class="tg-yw4l">Описание</th>
+	    <th class="tg-yw4l">Подробнее</th>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">1</td>
+	    <td class="tg-yw4l">15.01.2017-15.12.2017 ЦТПО МИСиС</td>
+	    <td class="tg-yw4l">Образовательные программы Макетированию и моделированию технических объектов, Техническому дизайну и программированию</td>
+	    <td class="tg-yw4l">Регистрация на www.mos.ru</td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">2</td>
+	    <td class="tg-yw4l">18-22 апреля 2017, ВДНХ</td>
+	    <td class="tg-yw4l">Мастер-классы ЦТПО «МИСиС»на стенде Департамента образования г.Москва,,в рамках салона образования ММСО-2017</td>
+	    <td class="tg-yw4l">Регистрация на http://mmco-expo.ru/</td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">3</td>
+	    <td class="tg-yw4l">30.10.2017-05.11.2017 Дворец пионеров «Воробьевы горы»</td>
+	    <td class="tg-yw4l">Цифровое производство на "Неделе игры и игрушки"!</td>
+	    <td class="tg-yw4l">https://fablabmoscowmisis.timepad.ru/event/633029/</td>
+	  </tr>
+	</table>
+
+
 	<h3>Создание Созданий</h3>
 	<p>Хватит расстреливать компьютерных монстров, научись создавать своих собственных!</p>
 	<img src="/img/ctpo/2.jpg" alt="">
