--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -19,10 +19,10 @@
 	</style>
 	<table class="tg">
 	  <tr>
-	    <th class="tg-yw4l">№</th>
-	    <th class="tg-yw4l">Дата и место</th>
-	    <th class="tg-yw4l">Описание</th>
-	    <th class="tg-yw4l">Подробнее</th>
+	    <th class="tg-yw4l"><strong>№</strong></th>
+	    <th class="tg-yw4l"><strong>Дата и место</strong></th>
+	    <th class="tg-yw4l"><strong>Описание</strong></th>
+	    <th class="tg-yw4l"><strong>Подробнее</strong></th>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">1</td>
