--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -27,7 +27,7 @@
 	  <tr>
 	    <td class="tg-yw4l">1</td>
 	    <td class="tg-yw4l">15.01.2017-15.12.2017 ЦТПО МИСиС</td>
-	    <td class="tg-yw4l">Образовательные программы Макетированию и моделированию технических объектов, Техническому дизайну и программированию</td>
+	    <td class="tg-yw4l">Образовательные программы <br />Макетированию и моделированию технических объектов, Техническому дизайну и программированию</td>
 	    <td class="tg-yw4l">Регистрация на <a href="www.mos.ru">www.mos.ru</a></td>
 	  </tr>
 	  <tr>
