--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -26,19 +26,19 @@
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">1</td>
-	    <td class="tg-yw4l">15.01.2017-15.12.2017 ЦТПО МИСиС</td>
+	    <td class="tg-yw4l">15.01.2017-15.12.2017 <br />ЦТПО МИСиС</td>
 	    <td class="tg-yw4l">Образовательные программы <br />Макетированию и моделированию технических объектов, Техническому дизайну и программированию</td>
 	    <td class="tg-yw4l">Регистрация на <a href="www.mos.ru">www.mos.ru</a></td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">2</td>
-	    <td class="tg-yw4l">18-22 апреля 2017, ВДНХ</td>
+	    <td class="tg-yw4l">18-22 апреля 2017, <br />ВДНХ</td>
 	    <td class="tg-yw4l">Мастер-классы ЦТПО «МИСиС»на стенде Департамента образования г.Москва,,в рамках салона образования ММСО-2017</td>
 	    <td class="tg-yw4l">Регистрация на <a href="http://mmco-expo.ru/">http://mmco-expo.ru/</a></td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">3</td>
-	    <td class="tg-yw4l">30.10.2017-05.11.2017 Дворец пионеров «Воробьевы горы»</td>
+	    <td class="tg-yw4l">30.10.2017-05.11.2017 <br />Дворец пионеров «Воробьевы горы»</td>
 	    <td class="tg-yw4l">Цифровое производство на "Неделе игры и игрушки"!</td>
 	    <td class="tg-yw4l"><a href="https://fablabmoscowmisis.timepad.ru/event/633029/">https://fablabmoscowmisis.timepad.ru/event/633029/</a></td>
 	  </tr>
