--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -27,13 +27,13 @@
 	  <tr>
 	    <td class="tg-yw4l">1</td>
 	    <td class="tg-yw4l">15.01.2017-15.12.2017 <br />ЦТПО МИСиС</td>
-	    <td class="tg-yw4l">Образовательные программы <br />Макетированию и моделированию технических объектов, Техническому дизайну и программированию</td>
+	    <td class="tg-yw4l"><i>Образовательные программы</i> <br />Макетированию и моделированию технических объектов, Техническому дизайну и программированию</td>
 	    <td class="tg-yw4l">Регистрация на <a href="www.mos.ru">www.mos.ru</a></td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">2</td>
 	    <td class="tg-yw4l">18-22 апреля 2017, <br />ВДНХ</td>
-	    <td class="tg-yw4l">Мастер-классы ЦТПО «МИСиС»на стенде Департамента образования г.Москва,,в рамках салона образования ММСО-2017</td>
+	    <td class="tg-yw4l"><i>Мастер-классы ЦТПО «МИСиС»на стенде Департамента образования г.Москва, в рамках салона образования ММСО-2017</i></td>
 	    <td class="tg-yw4l">Регистрация на <a href="http://mmco-expo.ru/">http://mmco-expo.ru/</a></td>
 	  </tr>
 	  <tr>
