--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -10,7 +10,7 @@
 		Знакомство с ЦТПО можно начать с экскурсии (заявку присылайте на fablab@misis.ru), чтобы потом поучаствовать в тематическом мастер-классе, послушать лекцию или поучаствовать в образовательной программе, например:
 	</p>
 	<br>
-	<h3>Мероприятия ЦТПО НИТУ "МИСиС"</h3>
+	<h3>Мероприятия ЦТПО НИТУ «МИСиС»*:</h3>
 	<br />
 	<style type="text/css">
 	.tg  {border-collapse:collapse;border-spacing:0;}
@@ -44,6 +44,8 @@
 	    <td class="tg-yw4l"><a href="https://fablabmoscowmisis.timepad.ru/event/633029/">https://fablabmoscowmisis.timepad.ru/event/633029/</a></td>
 	  </tr>
 	</table>
+
+	<i>*<p>открытые мастер-классы опубликованы в разделе сайта «События».</p></i>
 <br />
 
 	<h3>Создание Созданий</h3>
