--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -45,7 +45,7 @@
 	  </tr>
 	</table>
 
-	<i>*<p>открытые мастер-классы опубликованы в разделе сайта «События».</p></i>
+	<i><p>* открытые мастер-классы опубликованы в разделе сайта «События».</p></i>
 <br />
 
 	<h3>Создание Созданий</h3>
