--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -28,7 +28,7 @@
 	  <tr>
 	    <td class="tg-yw4l">1</td>
 	    <td class="tg-yw4l"><i>15.01.2017-15.12.2017</i>, <br /><br />ЦТПО МИСиС</td>
-	    <td class="tg-yw4l"><i>Образовательные программы</i> <br /<br />>Макетированию и моделированию технических объектов, Техническому дизайну и программированию</td>
+	    <td class="tg-yw4l"><i>Образовательные программы</i> <br /<br />Макетированию и моделированию технических объектов, Техническому дизайну и программированию</td>
 	    <td class="tg-yw4l">Регистрация на <a href="www.mos.ru">www.mos.ru</a></td>
 	  </tr>
 	  <tr>
