--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -47,7 +47,14 @@
 
 	<i><p>* открытые мастер-классы опубликованы в разделе сайта «События».</p></i>
 <br />
+	<h4>Мы на «ММСО 2017»</h4>
+	<img src="/img/ctpo/6.jpg" alt="">
+	<br />
+	<img src="/img/ctpo/7.jpg" alt="">
 
+	<p>все фото экспозиции <a href="https://flic.kr/s/aHskT9PyXG">здесь</a></p>
+
+<br />
 	<h3>Создание Созданий</h3>
 	<p>Хватит расстреливать компьютерных монстров, научись создавать своих собственных!</p>
 	<img src="/img/ctpo/2.jpg" alt="">
