--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -39,9 +39,21 @@
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">3</td>
-	    <td class="tg-yw4l"><i>30.10.2017-05.11.2017 </i><br /><br />Дворец пионеров «Воробьевы горы»</td>
+	    <td class="tg-yw4l"><i>01.10.2017-15.11.2017 </i><br /><br /></td>
+	    <td class="tg-yw4l">Отборочный этап конкурса «Инженерный старт-2017»</td>
+	    <td class="tg-yw4l"><i>Положение о конкурсе <a href="http://bit.ly/2C6Ut2c">http://bit.ly/2C6Ut2c</a> Проекты для участия в отборочном этапе необходимо направить на <email>fablab@misis.ru</email>, с пометкой «Инженерный старт 2017»</i></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">4</td>
+	    <td class="tg-yw4l"><i>30.10.2017-05.11.2017</i><br /><br />Дворец пионеров «Воробьевы горы»</td>
 	    <td class="tg-yw4l">Цифровое производство на "Неделе игры и игрушки"!</td>
 	    <td class="tg-yw4l"><a href="https://fablabmoscowmisis.timepad.ru/event/633029/">https://fablabmoscowmisis.timepad.ru/event/633029/</a></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">5</td>
+	    <td class="tg-yw4l"><i>25.11.2017</i><br /><br /></td>
+	    <td class="tg-yw4l">Финал конкурса инженерный проектов школьников «Инженерный старт – 2017»</td>
+	    <td class="tg-yw4l">Подробная программа на <a href="http://hitech-school.ru/start-2017">http://hitech-school.ru/start-2017</a></td>
 	  </tr>
 	</table>
 
