--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -59,6 +59,12 @@
 
 	<i><p>* открытые мастер-классы опубликованы в разделе сайта «События».</p></i>
 <br />
+
+	<h4><i>Демонстрационный экзамен по персональному цифровому производству</i></h4>
+	<p><i>9 сентября, в рамках международного фестиваля изобретателей состоялся первый демонстрационный экзамен по персональному цифровому производству.</i></p>
+	<img src="/img/ctpo/6.jpg" alt="">
+	<p><i>Демонстрационный экзамен проводится в целях подтверждения качества получаемых знаний по персональному цифровому производству учащихся школ г.Москвы и является одним из инструментов стимулирования роста интересна к научно-техническому творчеству и мейкерству со стороны школ.</i></p>
+
 	<h4>Мы на «ММСО 2017»</h4>
 	<img src="/img/ctpo/6.jpg" alt="">
 	<br />
@@ -69,7 +75,7 @@
 <br />
 	<h3>Создание Созданий</h3>
 	<p>Хватит расстреливать компьютерных монстров, научись создавать своих собственных!</p>
-	<img src="/img/ctpo/2.jpg" alt="">
+	<img src="/img/ctpo/ex.png" alt="">
 	<ul>
 		<li>знакомство с техникой моделирования методом виртуальной лепки;</li>
 		<li>знакомство с устройством и принципом работы 3D принтера, работающего по принципу распределения расплавленного термопласта;</li>
