--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -62,7 +62,7 @@
 
 	<h4><i>Демонстрационный экзамен по персональному цифровому производству</i></h4>
 	<p><i>9 сентября, в рамках международного фестиваля изобретателей состоялся первый демонстрационный экзамен по персональному цифровому производству.</i></p>
-	<img src="/img/ctpo/ex.png" alt="">
+	<img src="/img/ctpo/ex.png" style="width:70%;" alt="">
 	<p><i>Демонстрационный экзамен проводится в целях подтверждения качества получаемых знаний по персональному цифровому производству учащихся школ г.Москвы и является одним из инструментов стимулирования роста интересна к научно-техническому творчеству и мейкерству со стороны школ.</i></p>
 
 	<h4>Мы на «ММСО 2017»</h4>
