--- a/partial/equipment.html
+++ b/partial/equipment.html
@@ -65,13 +65,13 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<a href="/#/equipment/laser-pro-spirit" class="thumbnail">
 					<img src="/img/equipment-list/epilog-mini.jpg">
-					<span>Устройсво лазерной резки/гравировки Epilog Mini24 40 Вт</span>
+					<span>Устройство лазерной резки/гравировки Epilog Mini24 40 Вт</span>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<a href="/#/equipment/laser-pro-spirit" class="thumbnail">
 					<img src="/img/equipment-list/pro-spirit.jpg">
-					<span>Устройсво лазерной резки/гравировки LaserPRO Spirit 100 Вт</span>
+					<span>Устройство лазерной резки/гравировки LaserPRO Spirit 100 Вт</span>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-4">
