--- a/partial/main.html
+++ b/partial/main.html
@@ -6,7 +6,12 @@
 				<a href="http://bit.ly/2utdMQ6" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Поступить</a>
 			</div>
 		</div>
-	-->
+	--><div data-img="/img/slider/dfms.png" class="fotorama-container">
+			<div class="container">
+				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">Поступи в магистратуру Фаблаб по портфолио!</p>
+				<a href="https://fablabmoscowmisis.timepad.ru/event/512348/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Перейти</a>
+			</div>
+		</div>
 		<div data-img="/img/slider/arriving2.png" class="fotorama-container">
 			<div class="container">
 				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">"Maker Faire Moscow прошел, но мейкеры на связи!</p>
@@ -20,12 +25,7 @@
 			</div>
 		</div>
 
-		<div data-img="/img/slider/dfms.png" class="fotorama-container">
-			<div class="container">
-				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">Поступи в магистратуру Фаблаб по портфолио!</p>
-				<a href="https://fablabmoscowmisis.timepad.ru/event/512348/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Перейти</a>
-			</div>
-		</div>
+		
 	<!--
 		<div data-img="/img/slider/tree.png" data-thumb="/img/slider/thumb/tree.jpg"><div class="hide"></div></div>
 
