--- a/partial/master.html
+++ b/partial/master.html
@@ -64,23 +64,28 @@
 	<p>
 		Выпускники программы — креативные технические специалисты, готовые к технологическим вызовам стремительно меняющегося мира. Они способны интегрировать компетенции из различных областей и применять их для создания и вывода на рынок новых высокотехнологичных продуктов. Это ценнейший человеческий капитал малых технологичных стартапов и крупных корпораций модернизируемой России.
 	</p>
+	<br />
 	<p>
-		Магистерская программа «Технологии и материалы цифрового производства» реализуется по двум направлениям подготовки: 
+		<bold>Магистерская программа «Технологии и материалы цифрового производства» реализуется по двум направлениям подготовки: </bold>
 	</p>
-	<table>
-	<tbody>
-	<tr style="height: 23px;">
-	<td style="height: 23px;">&nbsp;15.04.02</td>
-	<td style="height: 23px;">&nbsp;Технологические машины и оборудование&nbsp;</td>
-	</tr>
-	<tr style="height: 23px;">
-	<td style="height: 23px;">&nbsp;22.04.01</td>
-	<td style="height: 23px;">Материаловедение и технологии материалов</td>
-	</tr>
-	</tbody>
-	</table>
+	<p>
+		<table>
+		<tbody>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">&nbsp;15.04.02</td>
+		<td style="height: 23px;">&nbsp;Технологические машины и оборудование&nbsp;</td>
+		</tr>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">&nbsp;22.04.01</td>
+		<td style="height: 23px;">Материаловедение и технологии материалов</td>
+		</tr>
+		</tbody>
+		</table>
+	</p>
 	<p>
 		<a href="http://misis.ru/files/-/40a231f9f7f74d45c9de96270f3a8f20/15.04.02_%D0%A2%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B5_%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D1%8B_%D0%B8_%D0%BE%D0%B1%D0%BE%D1%80%D1%83%D0%B4%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_(%D0%AD%D0%BA%D0%BE%D0%A2%D0%B5%D1%85).pdf">Программа по направлению подготовки 15.04.02 «Технологические машины и оборудование» (ЭкоТех) </a>
+	</p>
+	<p>
 		<a href="http://misis.ru/files/-/2f77880b78077b804c30061b0a28cc96/22.04.01_%D0%9C%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D0%BE%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5_%D0%B8_%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8_%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%B0%D0%BB%D0%BE%D0%B2_(%D0%98%D0%9D%D0%9C%D0%98%D0%9D).pdf">Программа по направлению подготовки 22.04.01 «Материаловедение и технологии материалов» (ИНМиН)</a>
 	</p>
 	<p>
