--- a/partial/master.html
+++ b/partial/master.html
@@ -65,9 +65,9 @@
 		Выпускники программы — креативные технические специалисты, готовые к технологическим вызовам стремительно меняющегося мира. Они способны интегрировать компетенции из различных областей и применять их для создания и вывода на рынок новых высокотехнологичных продуктов. Это ценнейший человеческий капитал малых технологичных стартапов и крупных корпораций модернизируемой России.
 	</p>
 	<br />
-	<p>
-		<bold>Магистерская программа «Технологии и материалы цифрового производства» реализуется по двум направлениям подготовки: </bold>
-	</p>
+	<h4>
+		<strong>Магистерская программа «Технологии и материалы цифрового производства» реализуется по двум направлениям подготовки: </strong>
+	</h4>
 	<p>
 		<table>
 		<tbody>
