--- a/partial/main.html
+++ b/partial/main.html
@@ -8,14 +8,14 @@
 		</div>
 	--><div data-img="/img/slider/dfms.png" class="fotorama-container">
 			<div class="container">
-				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">Поступи в магистратуру Фаблаб по портфолио!</p>
-				<a href="https://fablabmoscowmisis.timepad.ru/event/512348/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Перейти</a>
+				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">Магистратура "Технологии и материалы цифрового производства"</p>
+				<a href="https://fablabmoscowmisis.timepad.ru/event/512348/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Хочу здесь учиться</a>
 			</div>
 		</div>
 		<div data-img="/img/slider/arriving2.png" class="fotorama-container">
 			<div class="container">
-				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">"Maker Faire Moscow прошел, но мейкеры на связи!</p>
-				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Видео и контакты</a>
+				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">Maker Faire Moscow - все мы мейкеры!</p>
+				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Хочу быть мейкером</a>
 			</div>
 		</div>
 
