--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -6,9 +6,9 @@
 				<h3>Мы находимся на территории Национального исследовательского технологического университета "МИСиС":</h3>
 				<p>г. Москва, м. Октябрьская, Крымский вал, д. 3</p>
 				<h3>Часы работы:</h3>
-				<p style="color:red;font-size:18px;">В связи с подготовкой к фестивалю Maker Faire Moscow 2017 Фаблаб закрыт для посетителей в период до 10 сентября.</p>
-				<p>Ср&nbsp;&mdash; Чт: 11:00&nbsp;&mdash; 18:00<br>
-				Телефон: <nobr>8 (495) 955-01-20</nobr></p>
+				<p style="color:red;font-size:18px;">Мы готовим большие проекты и закрываем до 15.09.2018 "открытые дни". До этого времени вы можете прийти только <a href="http://fablab77.ru/#/events">сюда</></p>
+<!--				<p>Ср&nbsp;&mdash; Чт: 11:00&nbsp;&mdash; 18:00<br> -->
+				<!--Телефон: <nobr>8 (495) 955-01-20</nobr></p>-->
 			</div>
 			<div class="col-sm-6" ng-controller="mapController">
 				<!-- // <script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=gdcMrFGswe81oTlJu1RvQuWvKtF11xao&width=100%&height=450"></script> -->
