--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -6,7 +6,7 @@
 				<h3>Мы находимся на территории Национального исследовательского технологического университета "МИСиС":</h3>
 				<p>г. Москва, м. Октябрьская, Крымский вал, д. 3</p>
 				<h3>Часы работы:</h3>
-				<p style="color:red;font-size:18px;">Мы готовим большие проекты и закрываем до 15.09.2018 "открытые дни". До этого времени вы можете прийти только <a href="http://fablab77.ru/#/events">сюда</></p>
+				<p style="color:red;font-size:18px;">Мы готовим большие проекты и закрываем до 15.09.2018 "открытые дни". До этого времени вы можете прийти только <a href="http://fablab77.ru/#/events">сюда</a></p>
 <!--				<p>Ср&nbsp;&mdash; Чт: 11:00&nbsp;&mdash; 18:00<br> -->
 				<!--Телефон: <nobr>8 (495) 955-01-20</nobr></p>-->
 			</div>
