--- a/include/header.html
+++ b/include/header.html
@@ -74,7 +74,7 @@
 					</li>
 					<li><a href="https://www.facebook.com/fablab77" target="_blank">Новости</a></li>
 					<li><a href="#/ctpo">ЦТПО</a></li>
-					<li><a href="#/master">Магистратура</a></li>
+					<li><a href="http://fab.misis.ru/" target="blank">Магистратура</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="#/events"><font color="red"><strong>События</strong></font></a></li>
 
