Link to fab btn

--- a/partial/main.html
+++ b/partial/main.html
@@ -9,7 +9,7 @@
 	--><div data-img="/img/slider/dfms.png" class="fotorama-container">
 			<div class="container">
 				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">Магистратура "Технологии и материалы цифрового производства"</p>
-				<a href="https://fablabmoscowmisis.timepad.ru/event/512348/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Хочу здесь учиться</a>
+				<a href="http://fab.misis.ru/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Хочу здесь учиться</a>
 			</div>
 		</div>
 		<div data-img="/img/slider/arriving2.png" class="fotorama-container">
