--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -53,6 +53,7 @@
 		<p>
 			Как попасть в ФАБЛАБ? Пишите на <a href="mailto:fablab@misis.ru">fablab@misis.ru</a>.
 		</p>
+		<p>Телефон: +79152851377</p>
 	</div>
 
 </article>
