--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -9,6 +9,61 @@
 		ЦТПО — это уникальная площадка дополнительного образования московских школьников и предметного повышения квалификации педагогов.<br>
 		Знакомство с ЦТПО можно начать с экскурсии (заявку присылайте на fablab@misis.ru), чтобы потом поучаствовать в тематическом мастер-классе, послушать лекцию или поучаствовать в образовательной программе, например:
 	</p>
+
+
+	<br>
+	<h3>Конкурсные мероприятия ЦТПО НИТУ «МИСиС»*:</h3>
+	<br />
+	<style type="text/css">
+	.tg  {border-collapse:collapse;border-spacing:0;}
+	.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+	.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+	.tg .tg-yw4l{vertical-align:top}
+	</style>
+	<table class="tg">
+	  <tr>
+	    <th class="tg-yw4l"><strong>№</strong></th>
+	    <th class="tg-yw4l"><strong>Дата и место</strong></th>
+	    <th class="tg-yw4l"><strong>Описание</strong></th>
+	    <th class="tg-yw4l"><strong>Подробнее</strong></th>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">1</td>
+	    <td class="tg-yw4l"><i>02.04.2018 - 01.08.2018</i>, <br /><br />ЦТПО МИСиС</td>
+	    <td class="tg-yw4l"><i></i>Конкурс на лучший DIY школьный проект для фестиваля изобретателей Maker Faire Moscow 2018</td>
+	    <td class="tg-yw4l">Заявки с описанием проекта принимаются по элкутронной почте на  <email>fablabmoscow@gmail.com</email></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">2</td>
+	    <td class="tg-yw4l"><i>18-22 апреля 2017, </i><br /><br />ВДНХ</td>
+	    <td class="tg-yw4l"><i>Мастер-классы ЦТПО «МИСиС»на стенде Департамента образования г.Москва, в рамках салона образования ММСО-2017</i></td>
+	    <td class="tg-yw4l">Регистрация на <a href="http://mmco-expo.ru/">http://mmco-expo.ru/</a></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">3</td>
+	    <td class="tg-yw4l"><i>01.10.2017-15.11.2017 </i><br /><br /></td>
+	    <td class="tg-yw4l">Отборочный этап конкурса «Инженерный старт-2017»</td>
+	    <td class="tg-yw4l"><i>Положение о конкурсе <a href="http://bit.ly/2C6Ut2c">http://bit.ly/2C6Ut2c</a> Проекты для участия в отборочном этапе необходимо направить на <email>fablab@misis.ru</email>, с пометкой «Инженерный старт 2017»</i></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">4</td>
+	    <td class="tg-yw4l"><i>30.10.2017-05.11.2017</i><br /><br />Дворец пионеров «Воробьевы горы»</td>
+	    <td class="tg-yw4l">Цифровое производство на "Неделе игры и игрушки"!</td>
+	    <td class="tg-yw4l"><a href="https://fablabmoscowmisis.timepad.ru/event/633029/">https://fablabmoscowmisis.timepad.ru/event/633029/</a></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l">5</td>
+	    <td class="tg-yw4l"><i>25.11.2017</i><br /><br /></td>
+	    <td class="tg-yw4l">Финал конкурса инженерный проектов школьников «Инженерный старт – 2017»</td>
+	    <td class="tg-yw4l">Подробная программа на <a href="http://hitech-school.ru/start-2017">http://hitech-school.ru/start-2017</a></td>
+	  </tr>
+	</table>
+
+	<i><p>* открытые мастер-классы опубликованы в разделе сайта «События».</p></i>
+<br />
+
+
+
 	<br>
 	<h3>Мероприятия ЦТПО НИТУ «МИСиС»*:</h3>
 	<br />
