--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -30,8 +30,10 @@
 	  <tr>
 	    <td class="tg-yw4l">1</td>
 	    <td class="tg-yw4l"><i>02.04.2018 - 01.08.2018</i>, <br /><br />ЦТПО МИСиС</td>
-	    <td class="tg-yw4l"><i></i>Конкурс на лучший DIY школьный проект для фестиваля изобретателей Maker Faire Moscow 2018</td>
-	    <td class="tg-yw4l">Заявки с описанием проекта принимаются по элкутронной почте на  <email>fablabmoscow@gmail.com</email></td>
+	    <td class="tg-yw4l"><i>Конкурс на лучший DIY школьный проект для фестиваля изобретателей Maker Faire Moscow 2018</i><br /> Используя современные цифровые машины и оборудование, программируемые микроконтроллеры и материалы, доступные в ЦТПО НИТУ "МИСиС", вы можете создать все (или почти все), начиная от домашней автоматизированной фермы и, заканчивая умным роботом, способным самомтоятельно ориентироваться в пространстве.  <br />
+Лучший проект получил право быть выставленным в центральной секции фестиваля изобретателей Maker Faire Moscow 2018. 
+</td>
+	    <td class="tg-yw4l">Заявки с описанием проекта принимаются по элкутронной почте на  <email>fablab@misis.ru</email></td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">2</td>
