--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -12,7 +12,7 @@
 
 
 	<br>
-	<h3>Конкурсные мероприятия ЦТПО НИТУ «МИСиС»*:</h3>
+	<h3>Конкурсные мероприятия ЦТПО НИТУ «МИСиС»:</h3>
 	<br />
 	<style type="text/css">
 	.tg  {border-collapse:collapse;border-spacing:0;}
@@ -29,39 +29,40 @@
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">1</td>
-	    <td class="tg-yw4l"><i>02.04.2018 - 01.08.2018</i>, <br /><br />ЦТПО МИСиС</td>
+	    <td class="tg-yw4l"><i>02.04.2018 - 01.08.2018</i>, <br /><br />ЦТПО НИТУ "МИСиС"</td>
 	    <td class="tg-yw4l"><i>Конкурс на лучший DIY школьный проект для фестиваля изобретателей Maker Faire Moscow 2018</i><br /> Используя современные цифровые машины и оборудование, программируемые микроконтроллеры и материалы, доступные в ЦТПО НИТУ "МИСиС", вы можете создать все (или почти все), начиная от домашней автоматизированной фермы и, заканчивая умным роботом, способным самомтоятельно ориентироваться в пространстве.  <br />
 Лучший проект получил право быть выставленным в центральной секции фестиваля изобретателей Maker Faire Moscow 2018. 
 </td>
-	    <td class="tg-yw4l">Заявки с описанием проекта принимаются по элкутронной почте на  <email>fablab@misis.ru</email></td>
+	    <td class="tg-yw4l">Заявки с описанием проекта принимаются по адресу <email>fablab@misis.ru</email>. В теме письма необходимо указать "MFM2018 Лучший DIY школьный проект".</td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">2</td>
-	    <td class="tg-yw4l"><i>18-22 апреля 2017, </i><br /><br />ВДНХ</td>
-	    <td class="tg-yw4l"><i>Мастер-классы ЦТПО «МИСиС»на стенде Департамента образования г.Москва, в рамках салона образования ММСО-2017</i></td>
-	    <td class="tg-yw4l">Регистрация на <a href="http://mmco-expo.ru/">http://mmco-expo.ru/</a></td>
+	    <td class="tg-yw4l"><i>08.06.2018-05.07.2018 </i><br /><br />Музей современного искусства Garage</td>
+	    <td class="tg-yw4l"><i>Лучшая абстрактная скульптура</i><br />Во время мастер-класс по 2D и лазерной резке необходимо спроектировать сборную абстрактную скульптуру в программном пакете Inkscape/CorelDraw и произвести ее с помощью лазерного гравера GCC LaserPro. В качестве материала может быть использована фанера толщиной 3 мм или листовой акрил толщиной 4 мм. Оценивается сложность геометрии деталей и отсутствие повторений</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/740958/">https://fablabmoscowmisis.timepad.ru/event/740958/</a></td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">3</td>
-	    <td class="tg-yw4l"><i>01.10.2017-15.11.2017 </i><br /><br /></td>
-	    <td class="tg-yw4l">Отборочный этап конкурса «Инженерный старт-2017»</td>
-	    <td class="tg-yw4l"><i>Положение о конкурсе <a href="http://bit.ly/2C6Ut2c">http://bit.ly/2C6Ut2c</a> Проекты для участия в отборочном этапе необходимо направить на <email>fablab@misis.ru</email>, с пометкой «Инженерный старт 2017»</i></td>
+	    <td class="tg-yw4l"><i>19.05.2018 - 20.05.2018</i><br /><br />ЦТПО НИТУ "МИСиС"</td>
+	    <td class="tg-yw4l"><i>Конкурс на лучшую школьную теплицу</i><br />
+В рамкахх Агромейкертона командам школьников необходимо разработать систему автоматизации выращивания растений, используя доступные в ЦТПО НИТУ “МИСиС” цифровые машины (фрезерные станки, лазерные граверы, 3D принтеры). Оценивается универсальность решения и использование легкодоступных материалов и электроники. 
+</td>
+	    <td class="tg-yw4l">Заявки на участие в мероприятии принимаются по адресу <email>fablab@misis.ru</email>. В теме письма указать "Агромейкертон".</td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">4</td>
-	    <td class="tg-yw4l"><i>30.10.2017-05.11.2017</i><br /><br />Дворец пионеров «Воробьевы горы»</td>
-	    <td class="tg-yw4l">Цифровое производство на "Неделе игры и игрушки"!</td>
-	    <td class="tg-yw4l"><a href="https://fablabmoscowmisis.timepad.ru/event/633029/">https://fablabmoscowmisis.timepad.ru/event/633029/</a></td>
+	    <td class="tg-yw4l"><i>08.09.2018 - 09.09.2018</i><br /><br />Парк Горького</td>
+	    <td class="tg-yw4l"><i>Лучший принт на футболке</i><br /> Участники соревнования будут состязаться в мастерстве нанесения изображений на ткань с помощью техники, известной как шелкография. Оценивается аккуратность выполнения работы и уровень детализация изображения на ткани.</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/753372/">https://fablabmoscowmisis.timepad.ru/event/753372/</a></td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">5</td>
-	    <td class="tg-yw4l"><i>25.11.2017</i><br /><br /></td>
-	    <td class="tg-yw4l">Финал конкурса инженерный проектов школьников «Инженерный старт – 2017»</td>
-	    <td class="tg-yw4l">Подробная программа на <a href="http://hitech-school.ru/start-2017">http://hitech-school.ru/start-2017</a></td>
+	    <td class="tg-yw4l"><i>08.09.2018 - 09.09.2018</i><br /><br />Парк Горького</td>
+	    <td class="tg-yw4l"><i>Лучший бумажная ракета</i><br />Участникам конкурса необходимо сконструировать из бумаги и скотча ракету, способную продержаться в состоянии полета максимальное количество времени. Ракеты запускаются с помощью пневматической системы. В качестве критерия оценки используется время от начала запуска до момента падения ракеты на землю.</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/753372/">https://fablabmoscowmisis.timepad.ru/event/753372/</a></td>
 	  </tr>
 	</table>
 
-	<i><p>* открытые мастер-классы опубликованы в разделе сайта «События».</p></i>
 <br />
 
 
