--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -37,7 +37,7 @@
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">2</td>
-	    <td class="tg-yw4l"><i>08.06.2018-05.07.2018 </i><br /><br />Музей современного искусства Garage</td>
+	    <td class="tg-yw4l"><i>08.06.2018-05.07.2018 </i><br /><br />ЧУК “Музей современного искусства “Гараж”</td>
 	    <td class="tg-yw4l"><i>Лучшая абстрактная скульптура</i><br />Во время мастер-класс по 2D и лазерной резке необходимо спроектировать сборную абстрактную скульптуру в программном пакете Inkscape/CorelDraw и произвести ее с помощью лазерного гравера GCC LaserPro. В качестве материала может быть использована фанера толщиной 3 мм или листовой акрил толщиной 4 мм. Оценивается сложность геометрии деталей и отсутствие повторений</td>
 	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/740958/">https://fablabmoscowmisis.timepad.ru/event/740958/</a></td>
 	  </tr>
@@ -51,13 +51,13 @@
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">4</td>
-	    <td class="tg-yw4l"><i>08.09.2018 - 09.09.2018</i><br /><br />Парк Горького</td>
+	    <td class="tg-yw4l"><i>08.09.2018 - 09.09.2018</i><br /><br />ЦПКиО Парк им. Горького</td>
 	    <td class="tg-yw4l"><i>Лучший принт на футболке</i><br /> Участники соревнования будут состязаться в мастерстве нанесения изображений на ткань с помощью техники, известной как шелкография. Оценивается аккуратность выполнения работы и уровень детализация изображения на ткани.</td>
 	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/753372/">https://fablabmoscowmisis.timepad.ru/event/753372/</a></td>
 	  </tr>
 	  <tr>
 	    <td class="tg-yw4l">5</td>
-	    <td class="tg-yw4l"><i>08.09.2018 - 09.09.2018</i><br /><br />Парк Горького</td>
+	    <td class="tg-yw4l"><i>08.09.2018 - 09.09.2018</i><br /><br />ЦПКиО Парк им. Горького</td>
 	    <td class="tg-yw4l"><i>Лучший бумажная ракета</i><br />Участникам конкурса необходимо сконструировать из бумаги и скотча ракету, способную продержаться в состоянии полета максимальное количество времени. Ракеты запускаются с помощью пневматической системы. В качестве критерия оценки используется время от начала запуска до момента падения ракеты на землю.</td>
 	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/753372/">https://fablabmoscowmisis.timepad.ru/event/753372/</a></td>
 	  </tr>
@@ -68,6 +68,107 @@
 
 
 	<br>
+	<h3>Мастер-классы и интерактивные программы ЦТПО НИТУ «МИСиС»:</h3>
+	<br />
+	<style type="text/css">
+	.tg  {border-collapse:collapse;border-spacing:0;}
+	.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+	.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+	.tg .tg-yw4l{vertical-align:top}
+	</style>
+	<table class="tg">
+	  <tr>
+	    
+	    <th class="tg-yw4l"><strong>Дата и место</strong></th>
+	    <th class="tg-yw4l"><strong>Время</strong></th>
+	    <th class="tg-yw4l"><strong>Описание</strong></th>
+	    <th class="tg-yw4l"><strong>Подробнее</strong></th>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l"><i>08.06.2018, 09.06.2018, 15.06.2018, 16.06.2018, 22.06.2018, 23.06.2018, 29.06.2018, 30.06.2018, 06.07.2018</i>, <br /><br />ЧУК “Музей современного искусства “Гараж”</td>
+	    <td class="tg-yw4l">11:30-13:00</td>
+	    <td class="tg-yw4l"><i>Печатаем пластиком</i> <br /<br />Мастер-классы для школьников по основам 3D моделирования и 3D печати, проведенные специалистами ЦТПО с использованием оборудования ЦТПО на площадке ЧУК “Музей современного искусства “Гараж”</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/741020/">https://fablabmoscowmisis.timepad.ru/event/741020/</a></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l"><i>08.06.2018, 09.06.2018, 15.06.2018, 16.06.2018, 22.06.2018, 23.06.2018, 29.06.2018, 30.06.2018, 06.07.2018</i>, <br /><br />ЧУК “Музей современного искусства “Гараж”</td>
+	    <td class="tg-yw4l">13:00-15:00</td>
+	    <td class="tg-yw4l"><i>Лазерная резка и абстрактная скульптура</i><br />
+Мастер-классы для школьников по основам 2D моделирования, лазерной резки и комбинированию плоских объектов в объемные конструкции, проведенные специалистами ЦТПО с использованием оборудования ЦТПО на площадке ЧУК “Музей современного искусства “Гараж”
+</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/741020/">https://fablabmoscowmisis.timepad.ru/event/741020/</a></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l"><i>10.06.2018, 17.06.2018, 24.06.2018, 01.07.2018</td>, <br /><br />ЧУК “Музей современного искусства “Гараж”</td>
+	    <td class="tg-yw4l">11:30-13:00</td>
+	    <td class="tg-yw4l"><i>Барельефы и числовое программное управление</i><br />Мастер-классы для школьников по основам 3D фрезерной обработки моделей, подготовленных интерпретацией полутоновых изображений, проведенные специалистами ЦТПО с использованием оборудования ЦТПО на площадке ЧУК “Музей современного искусства “Гараж</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/741020/">https://fablabmoscowmisis.timepad.ru/event/741020/</a></td>
+	  </tr>
+	  <tr>
+	    <td class="tg-yw4l"><i>10.06.2018, 17.06.2018, 24.06.2018, 01.07.2018</i>, <br /><br />ЧУК “Музей современного искусства “Гараж”</td>
+	    <td class="tg-yw4l">13:00-15:00</td>
+	    <td class="tg-yw4l"><i>Трехмерное сканирование и цифровая скульптура</i><br />
+Мастер-классы для школьников по основам 3D сканирования одушевленных и неодушевленных объектов, цифровой обработке результатов сканирования и подготовке моделей к 3D печати, проведенные специалистами ЦТПО с использованием оборудования ЦТПО на площадке ЧУК “Музей современного искусства “Гараж”
+</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/741020/">https://fablabmoscowmisis.timepad.ru/event/741020/</a></td>
+	  </tr>
+
+
+	  <tr>
+	    <td class="tg-yw4l"><i>08.09.2018, 09.08.2018</i><br /><br /></td>
+	    <td class="tg-yw4l">11:00-12:00, 12:00-13:00, 13:00-14:00, 14:00-15:00, 15:00-16:00, 17:00-18:00, 18:00-19:00</td>
+	    <td class="tg-yw4l"><i>Основы пайки: сборка значка с LED подсветкой</i><br />
+Мастер-классы по работе с паяльной станцией и монтажу выводных компонентов, проведенные сотрудниками ЦТПО в рамках международного фестиваля Maker Faire Moscow</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/">https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/</a></td>
+	  </tr>
+
+	  <tr>
+	    <td class="tg-yw4l"><i>08.09.2018, 09.08.2018</i><br /><br /></td>
+	    <td class="tg-yw4l">11:00-13:00, 13:00-15:00, 15:00-17:00, 17:00-19:00</td>
+	    <td class="tg-yw4l"><i>Соединение электронных компонентов: от макетной доски к SMD-монтажу</i><br />
+Мастер-классы по сборке электронных схем с использованием макетных досок и заготовок печатных плат для поверхностного монтажа компонентов, проведенные сотрудниками ЦТПО совместно с представителями компании “Амперка”  в рамках международного фестиваля Maker Faire Moscow</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/">https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/</a></td>
+	  </tr>
+
+	  <tr>
+	    <td class="tg-yw4l"><i>08.09.2018, 09.08.2018</i><br /><br /></td>
+	    <td class="tg-yw4l">11:00-19:00</td>
+	    <td class="tg-yw4l"><i>Noisy Toys</i><br />
+Интерактивная программа с демонстрацией акузотрона — установки, собранной из старых, отслуживших свое приборов и механизмов. Международный фестиваль Maker Faire Moscow
+</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/">https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/</a></td>
+	  </tr>
+
+	  <tr>
+	    <td class="tg-yw4l"><i>08.09.2018, 09.08.2018</i><br /><br /></td>
+	    <td class="tg-yw4l">11:00-13:00, 13:00-15:00, 15:00-17:00, 17:00-19:00</td>
+	    <td class="tg-yw4l"><i>Знакомство с электрическим транспортом</i><br />
+Мастер-класс: сборка модульных функциональных макетов электрических машин. Международный фестиваль Maker Faire Moscow
+</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/">https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/</a></td>
+	  </tr>
+
+	  <tr>
+	    <td class="tg-yw4l"><i>08.09.2018, 09.08.2018</i><br /><br /></td>
+	    <td class="tg-yw4l">11:00-12:00, 12:00-13:00, 13:00-14:00, 14:00-15:00, 15:00-16:00, 17:00-18:00, 18:00-19:00</td>
+	    <td class="tg-yw4l"><i>Rocket Science!</i><br />
+Мастер-класс по сборке бумажной ракеты, способной взлететь на высоту до 70 метров. Международный фестиваль Maker Faire Moscow
+</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/">https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/</a></td>
+	  </tr>
+
+	  <tr>
+	    <td class="tg-yw4l"><i>08.09.2018, 09.08.2018</i><br /><br /></td>
+	    <td class="tg-yw4l">11:00-12:00, 12:00-13:00, 13:00-14:00, 14:00-15:00, 15:00-16:00, 17:00-18:00, 18:00-19:00</td>
+	    <td class="tg-yw4l"><i>Печать методом шелкографии</i><br />
+Мастер-класс по основам трафаретной печати на примере печати пластизольными составами
+</td>
+	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/">https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/</a></td>
+	  </tr>
+
+	</table>
+
+<!--
 	<h3>Мероприятия ЦТПО НИТУ «МИСиС»*:</h3>
 	<br />
 	<style type="text/css">
@@ -118,6 +219,8 @@
 	<i><p>* открытые мастер-классы опубликованы в разделе сайта «События».</p></i>
 <br />
 
+
+
 	<h4><i>Демонстрационный экзамен по персональному цифровому производству</i></h4>
 	<p><i>9 сентября, в рамках международного фестиваля изобретателей состоялся первый демонстрационный экзамен по персональному цифровому производству.</i></p>
 	<img src="/img/ctpo/ex.png" style="width:70%;" alt="">
@@ -141,6 +244,8 @@
 		<li>изучение принципов моделирования с учетом особенностей технологии 3D печати (избежание или минимизация использования поддержек, обеспечение необходимой прочности детали и ее устойчивости в процессе печати и пр.)</li>
 		<li>знакомство с принципами открытого лицензирования продуктов и условий правомерного заимствования.</li>
 	</ul>
+	
+-->
 	<br>
 	<h3>Сделай и сыграй!</h3>
 	<p>Спроектируй, изготовь и собери собственную игру!</p>
