--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -75,10 +75,12 @@
 	.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
 	.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
 	.tg .tg-yw4l{vertical-align:top}
+
 	</style>
+	
 	<table class="tg">
 	  <tr>
-	    
+    
 	    <th class="tg-yw4l"><strong>Дата и место</strong></th>
 	    <th class="tg-yw4l"><strong>Время</strong></th>
 	    <th class="tg-yw4l"><strong>Описание</strong></th>
@@ -161,7 +163,7 @@
 	    <td class="tg-yw4l"><i>08.09.2018, 09.08.2018</i><br /><br /></td>
 	    <td class="tg-yw4l">11:00-12:00, 12:00-13:00, 13:00-14:00, 14:00-15:00, 15:00-16:00, 17:00-18:00, 18:00-19:00</td>
 	    <td class="tg-yw4l"><i>Печать методом шелкографии</i><br />
-Мастер-класс по основам трафаретной печати на примере печати пластизольными составами
+Мастер-класс по основам трафаретной печати на примере печати пластизольными составами по ткани (печать на футболках). Международный фестиваль Maker Faire Moscow
 </td>
 	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/">https://fablabmoscowmisis.timepad.ru/dashboard/event/753372/sales/</a></td>
 	  </tr>
