--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -101,7 +101,7 @@
 	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/741020/">https://fablabmoscowmisis.timepad.ru/event/741020/</a></td>
 	  </tr>
 	  <tr>
-	    <td class="tg-yw4l"><i>10.06.2018, 17.06.2018, 24.06.2018, 01.07.2018</td>, <br /><br />ЧУК “Музей современного искусства “Гараж”</td>
+	    <td class="tg-yw4l"><i>10.06.2018, 17.06.2018, 24.06.2018, 01.07.2018</i>, <br /><br />ЧУК “Музей современного искусства “Гараж”</td>
 	    <td class="tg-yw4l">11:30-13:00</td>
 	    <td class="tg-yw4l"><i>Барельефы и числовое программное управление</i><br />Мастер-классы для школьников по основам 3D фрезерной обработки моделей, подготовленных интерпретацией полутоновых изображений, проведенные специалистами ЦТПО с использованием оборудования ЦТПО на площадке ЧУК “Музей современного искусства “Гараж</td>
 	    <td class="tg-yw4l">Регистрация на <a href="https://fablabmoscowmisis.timepad.ru/event/741020/">https://fablabmoscowmisis.timepad.ru/event/741020/</a></td>
