--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -11,6 +11,44 @@
 	</p>
 
 
+
+	
+	<br>
+	<h3>Отборочный этап открытого городского конкурса научно-технических проектов школьников «ИНЖЕНЕРНЫЙ СТАРТ-2018». Прием заявок до 14 ноября</h3>
+	
+	<h6>Для кого</h6>
+	<ul>
+		<li>для московских школьников 3-11 классов (возраст от 10 до 17 лет включительно) выполнившие свои работы на базе Центров — участников сети ЦТПО и Фаблабов,</li>
+		<li>на Конкурс представляются индивидуальные и групповые проекты.</li>
+	</ul>
+
+	<h6>Что нужно сделать: </h6>
+	<ul>
+		<li>Выбрать номинацию — Зарегистрироваться — Прислать презентацию на почту fablab@misis.ru</li>
+	</ul>
+
+	<h5><strong>Номинации</strong></h5>
+	<h6>1. Владение технологией</h6>
+	<ul>
+		<li>изготовление модели на оборудовании цифрового производства (3D принтер, станки с ЧПУ, плоттер, конструктор и т.д.). Форма представления проекта — физический объект, модель, конструкция, прибор.
+		</li>
+	</ul>
+	<h6>2. Проектирование</h6>
+	<ul>
+		<li>разработка проекта на базе оригинальной технической идеи автора,</li>
+		<li>форма представления проекта — презентация разработки технической идеи в формате выступления,</li>
+	</ul>
+	<h6>3. Наука, технология, искусство (Science-Art)</h6>
+	<ul>
+		<li>, включающая в себя научно-технологическую и эстетическую составляющие, а именно:<br />
+- научно-технологическая составляющая: использование научных разработок, технологий цифрового производства и робототехники;<br />
+- эстетическая составляющая: апелляция к эмоциональной и умственной сфере человека, визуализация главного эстетического принципа – красоты, отсылка к широкому культурному контексту (ценностям, идеалам, мечтам), визуальная привлекательность, зрелищность, удобство использования</li>
+	</ul>
+
+<br />
+
+
+
 	<br>
 	<h3>Конкурсные мероприятия ЦТПО НИТУ «МИСиС»:</h3>
 	<br />
