--- a/partial/ctpo.html
+++ b/partial/ctpo.html
@@ -40,15 +40,29 @@
 	</ul>
 	<h6>3. Наука, технология, искусство (Science-Art)</h6>
 	<ul>
-		<li>, включающая в себя научно-технологическую и эстетическую составляющие, а именно:<br />
+		<li>работа, включающая в себя научно-технологическую и эстетическую составляющие, а именно:<br />
 - научно-технологическая составляющая: использование научных разработок, технологий цифрового производства и робототехники;<br />
 - эстетическая составляющая: апелляция к эмоциональной и умственной сфере человека, визуализация главного эстетического принципа – красоты, отсылка к широкому культурному контексту (ценностям, идеалам, мечтам), визуальная привлекательность, зрелищность, удобство использования</li>
 	</ul>
 
 <br />
+	<h3>Результаты конкурса «ИНЖЕНЕРНЫЙ СТАРТ-2018»</h3>
+	<p>
+		Конкурс "Инженерный старт" способствует развитию научно-технического проектирования школьников с участием ЦТПО ведущих университетов г.Москвы, и с 2013 года, объединяет на выставке и финале конкурса проекты, выполненные школьниками на площадках центров технологической поддержки образования. 
+	</p>
+	<p>
+В 2018 году в отборочном этапе в ЦТПО НИТУ "МИСиС" участвовал 31 проект, а в финал прошли три проекта в номинациях "Прототипирование" и "Владение технологией": <br />
+- проект макета безопасного пешеходоного перехода (Чалова Мария), <br />
+- проект "Робот-паук с веб-интерфейсом для задач умного дома" (автор - Козлов Александр),<br />
+- проект "Робот-краб с управляемыми клешнями, управлением по bluetooth и камерой" (автор - Максим Геращенков).<br />
+	</p>
+	<p>
+На финале конкурса дипломом победителя в разделе стендовых докладов был отмечен проект "Устройство из области Интернета вещей для контроля и сбора параметров устройств на примере мини-бара", выполненный одними из самых юных участников конкурса, Львом Манкевичем и Коробейникововым Василием (8 лет).
+	</p>
+	<img src="/img/ctpo/8.jpg" alt="">
 
 
-
+<br />
 	<br>
 	<h3>Конкурсные мероприятия ЦТПО НИТУ «МИСиС»:</h3>
 	<br />
