--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -29,21 +29,21 @@
 	<div class="content access">
 		<hr>
 		<h2>Доступ</h2>
-		<h3>Творческим индивидам</h3>
+<!-- 		<h3>Творческим индивидам</h3>
 		<p>
 			В голове свербит идея, руки чешутся в стремлении ее воплощения? Приходите в ФАБЛАБ.
 		</p>
 		<p>
 			Чтобы получить доступ к работе с оборудованием необходимо пройти обучение.
 		</p>
-		<h3>Образовательным учреждениям</h3>
+ -->		<h3>Образовательным учреждениям</h3>
 		<p>
 			Хочется добавить в образовательный процесс движения, шума фрезерного станка и запаха свежего термопласта? Хочется развить навыки командной и проектной работы? Приходите и приводите своих учащихся в ФАБЛАБ.
 		</p>
 		<p>
 			Начните с экскурсии, оставайтесь для реализации проектов.
 		</p>
-		<h3>Малому бизнесу</h3>
+<!-- 		<h3>Малому бизнесу</h3>
 		<p>
 			У вас родилась блестящая инновационная идея, реализуемость которой требует проверки — приходите в ФАБЛАБ.
 		</p>
@@ -54,6 +54,6 @@
 			Как попасть в ФАБЛАБ? Пишите на <a href="mailto:fablab@misis.ru">fablab@misis.ru</a>.
 		</p>
 		<p>Телефон: +79152851377</p>
-	</div>
+ -->	</div>
 
 </article>
