--- a/partial/main.html
+++ b/partial/main.html
@@ -83,7 +83,7 @@
 			<section class="bottom-article">
 				<h2>Фаблаб МИСиС&nbsp;&mdash; первый Российский фаблаб</h2>
 				<address>
-					Москва, метро Октябрьская, Крымский вал 3. Открыты: ср, чт: 11:00&nbsp;&mdash; 18:00.
+					Москва, метро Октябрьская, Крымский вал 3. <!-- Открыты: ср, чт: 11:00&nbsp;&mdash; 18:00. -->
 				</address>
 				<img class="pull-left" src="/img/photo/russian-fablab.jpg">
 				<p>
@@ -101,8 +101,8 @@
 				</p>
 				<p class="text-right">
 					<b>
-						Мы приглашаем всех желающих становится нашими соавторами.<br>
-						Мир идей и&nbsp;решений Fab&nbsp;Lab безграничен! <br>Добро пожаловать!
+<!-- 						Мы приглашаем всех желающих становится нашими соавторами.<br>
+ -->						Мир идей и&nbsp;решений Fab&nbsp;Lab безграничен! <br><!-- Добро пожаловать! -->
 					</b>
 				</p>
 				<p class="text-right text-muted">
