--- a/partial/fablab.html
+++ b/partial/fablab.html
@@ -10,7 +10,7 @@
 		<p><strong>ФАБЛАБ</strong>&nbsp;&mdash; это кратчайший путь от&nbsp;эскиза до&nbsp;готового изделия, это кратчайший путь от&nbsp;мечты, до&nbsp;ее&nbsp;воплощения.</p>
 		<p><strong>ФАБЛАБ</strong>&nbsp;&mdash; возможность сделать (почти) все, что угодно.</p>
 		<p>ФАБЛАБ при НИТУ &laquo;МИСиС&raquo; появился и&nbsp;развивается по&nbsp;тем&nbsp;же принципам, что и&nbsp;все остальные лаборатории проекта, основные из&nbsp;которых изложены в&nbsp;<a href="/fablab/charter">Хартии</a>.</p>
-		<h3>Что ФАБЛАБ может дать вам</h3>
+<!-- 		<h3>Что ФАБЛАБ может дать вам</h3>
 		<p>Любому инициативному и&nbsp;увлеченному индивиду или коллективу ФАБЛАБ дает технологическую площадку для реализации идей и&nbsp;проверки концепций.</p>
 		<p><strong>Да</strong>, оборудование и&nbsp;технологии ФАБЛАБ действительно позволяют сделать (почти) все что угодно.</p>
 		<p><strong>Нет</strong>, мы&nbsp;не&nbsp;работаем &laquo;по&nbsp;чертежам заказчика&raquo;.</p>
@@ -19,5 +19,5 @@
 		<p>Мы&nbsp;приглашаем к&nbsp;участию в&nbsp;регулярных тренингах или можем подготовить для Вас индивидуальную программу. В&nbsp;любом случае, обучение в&nbsp;ФАБЛАБ проходит в&nbsp;режиме реализации проектов. Мы&nbsp;все учимся, когда делаем.</p>
 		<p>Создание и&nbsp;развитие лабораторий цифрового производства <strong>ФАБЛАБ</strong> не&nbsp;нацелено на&nbsp;получение прибыли, мы&nbsp;работаем в&nbsp;режиме non profit, однако мы&nbsp;не&nbsp;можем предоставлять все наши услуги бесплатно. В&nbsp;зависимости от&nbsp;типа проекта, затрачиваемого на&nbsp;его реализацию времени и&nbsp;задействованного оборудования, назначаются определенные сборы, компенсирующие затраты на&nbsp;материалы и&nbsp;обслуживание оборудования.</p>
 		<p>Лаборатория цифрового производства <strong>ФАБЛАБ</strong> не&nbsp;нацелена на&nbsp;получение прибыли, но&nbsp;проекты, реализуемые в&nbsp;<strong>ФАБЛАБ</strong>, могут иметь потенциал для успешной коммерческой реализации. Однако коммерциализация проектов, рожденных в&nbsp;стенах <strong>ФАБЛАБ</strong>, должна проходить уже за&nbsp;их&nbsp;пределами. <strong>ФАБЛАБ</strong>, это место, где мечты обретают материальную форму, но&nbsp;это не&nbsp;место для их&nbsp;тиражирования. Серийное производство противоречит не&nbsp;столько техническим ограничениям <strong>ФАБЛАБ</strong>, сколько идеологическим.</p>
-	</div>
+ -->	</div>
 </article>
