--- a/include/header.html
+++ b/include/header.html
@@ -3,10 +3,10 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a href="https://www.facebook.com/fablab77"><img src="img/logos/fablab_fb.png" alt="Файсбук"></a>
-				<a href="https://vk.com/fablabmoscow"><img src="img/logos/fablab_vk.png" alt="Вконтакте"></a>
-				<a href="https://www.instagram.com/fablabmoscow/"><img src="img/logos/fablab_inst.png" alt="Инстаграмм"></a>
-				<a href="https://www.youtube.com/watch?v=A5WhYOFurmQ&list=PLT8ppxu_Hr6tkwiShGblRQLYqRHtN28Rs"><img src="img/logos/youtube.png" alt="YouTube"></a>
-				<a href="#/"><img src="img/logos/fablab.png" alt="Фаблаб Москва"></a>
+<!-- 				<a href="https://vk.com/fablabmoscow"><img src="img/logos/fablab_vk.png" alt="Вконтакте"></a>
+ --><!-- 				<a href="https://www.instagram.com/fablabmoscow/"><img src="img/logos/fablab_inst.png" alt="Инстаграмм"></a>
+ --><!-- 				<a href="https://www.youtube.com/watch?v=A5WhYOFurmQ&list=PLT8ppxu_Hr6tkwiShGblRQLYqRHtN28Rs"><img src="img/logos/youtube.png" alt="YouTube"></a>
+ -->				<a href="#/"><img src="img/logos/fablab.png" alt="Фаблаб Москва"></a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex8-collapse">
 					<div class="navbar-header-button-icon">
 						<span class="icon-bar"></span>
@@ -77,6 +77,7 @@
 					<li><a href="#/master">Магистратура</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="#/events"><font color="red"><strong>События</strong></font></a></li>
+					<li><a href="http://fablab77.online/"><font color="red"><strong>Школьникам</strong></font></a></li>
 
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
