--- a/include/header.html
+++ b/include/header.html
@@ -76,8 +76,8 @@
 					<li><a href="http://fab.misis.ru/ctpo.html">ЦТПО</a></li>
 					<li><a href="http://fab.misis.ru/" target="blank">Магистратура</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
-					<li><a href="#/events"><font color="red"><strong>События</strong></font></a></li>
-					<li><a href="http://fablab77.online/"><font color="red"><strong>Школьникам</strong></font></a></li>
+					<li><a href="#/events">События</a></li>
+					<li><a href="http://fablab77.online/"><font color="red"><strong>ШкольникамОнлайн</strong></font></a></li>
 
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
