--- a/include/header.html
+++ b/include/header.html
@@ -72,8 +72,8 @@
 							<li><a href="#/creativity/large">По крупному</a></li>
 						</ul>
 					</li>
-					<li><a href="https://www.facebook.com/fablab77" target="_blank">Новости</a></li>
-					<li><a href="http://fab.misis.ru/ctpo.html">ЦТПО</a></li>
+<!-- 					<li><a href="https://www.facebook.com/fablab77" target="_blank">Новости</a></li>
+ -->					<li><a href="http://fab.misis.ru/ctpo.html">ЦТПО</a></li>
 					<li><a href="http://fab.misis.ru/" target="blank">Магистратура</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="#/events">События</a></li>
