--- a/include/header.html
+++ b/include/header.html
@@ -78,6 +78,7 @@
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="#/events">События</a></li>
 					<li><a href="http://fablab77.online/"><font color="red"><strong>ШкольникамОнлайн</strong></font></a></li>
+					<li><a href="#/covid">COVID19</a></li>
 
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
