--- a/partial/main.html
+++ b/partial/main.html
@@ -6,7 +6,14 @@
 				<a href="http://bit.ly/2utdMQ6" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Поступить</a>
 			</div>
 		</div>
-	--><div data-img="/img/slider/dfms.png" class="fotorama-container">
+	-->
+		<div data-img="/img/slider/yo.PNG" class="fotorama-container">
+			<div class="container">
+				<a href="http://fablab77.ru/#/covid" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">COVID19</a>
+			</div>
+		</div>
+
+		<div data-img="/img/slider/dfms.png" class="fotorama-container">
 			<div class="container">
 				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">Магистратура "Технологии и материалы цифрового производства"</p>
 				<a href="http://fab.misis.ru/" target="blank" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Хочу здесь учиться</a>
