--- a/include/header.html
+++ b/include/header.html
@@ -78,12 +78,12 @@
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="#/events">События</a></li>
 					<li><a href="http://fablab77.online/"><font color="red"><strong>ШкольникамОнлайн</strong></font></a></li>
-					<li><a href="#/covid">COVID19</a></li>
+					<li><a href="#/covid"><b>COVID19</b></a></li>
 
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
-					<li><a href="http://moscow.makerfaire.com/" target="_blank"><img src="img/logos/Moscow_MF_Logom.png" alt="Первый фестиваль для и о Мейкерах" height="18"></a></li>
-					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
+<!-- 					<li><a href="http://maker.moscow/" target="_blank"><img src="img/logos/Moscow_MF_Logom.png" alt="Первый фестиваль для и о Мейкерах" height="18"></a></li>
+ -->					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
 					<li><a href="http://www.misis.ru/" target="blank"><img src="https://makerfairemoscow.files.wordpress.com/2016/03/logo-sm-black-no-text1.png?w=181&h=70
 " alt="Moscow Institute of Steel and Alloys" height="50"></a></li>
 				</ul>
