--- a/include/header.html
+++ b/include/header.html
@@ -73,7 +73,7 @@
 						</ul>
 					</li>
 <!-- 					<li><a href="https://www.facebook.com/fablab77" target="_blank">Новости</a></li>
- -->					<li><a href="ms/masters.html">ЦТПО</a></li>
+ -->					<li><a href="#/ctpo.html">ЦТПО</a></li>
 					<li><a href="https://fablabmoscowmisis.timepad.ru/event/1213813/" target="blank">Магистратура</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="#/events">События</a></li>
