--- a/include/header.html
+++ b/include/header.html
@@ -74,7 +74,7 @@
 					</li>
 <!-- 					<li><a href="https://www.facebook.com/fablab77" target="_blank">Новости</a></li>
  -->					<li><a href="#/ctpo.html">ЦТПО</a></li>
-					<li><a href="https://fablabmoscowmisis.timepad.ru/event/1213813/" target="blank">Магистратура</a></li>
+					<li><a href="http://fablab.moscow/" target="blank">Магистратура</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="#/events">События</a></li>
 					<li><a href="http://fablab77.online/"><font color="red"><strong>ШкольникамОнлайн</strong></font></a></li>
